# trimdown

./: README.md  meson.build  properties
Scenes/Scene 1/: properties
data/: com.github.artemanufrij.trimdown.appdata.xml.in  com.github.artemanufrij.trimdown.desktop.in  meson.build
meson/: post_install.py
po/: POTFILES  com.github.artemanufrij.trimdown.pot  fr.po  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
schemas/: com.github.artemanufrij.trimdown.gschema.xml
src/: Application.vala  MainWindow.vala  Settings.vala  meson.build
src/Dialogs/: NewProject.vala  Preferences.vala
src/Objects/: BaseObject.vala  Chapter.vala  Note.vala  Project.vala  Scene.vala
src/Services/: ProjectManager.vala
src/Utils/: Enums.vala  Lists.vala  Utils.vala
src/Widgets/: Bin.vala  Chapter.vala  ChapterList.vala  Note.vala  Notes.vala  Scene.vala  SceneList.vala
src/Widgets/Views/: Welcome.vala  Writer.vala  WriterView.vala
