sources = files(
    'Application.vala',
    'MainWindow.vala',
    'Settings.vala',
    'Objects/BaseObject.vala',
    'Objects/Scene.vala',
    'Objects/Note.vala',
    'Objects/Chapter.vala',
    'Objects/Project.vala',
    'Widgets/Scene.vala',
    'Widgets/SceneList.vala',
    'Widgets/Note.vala',
    'Widgets/Notes.vala',
    'Widgets/Chapter.vala',
    'Widgets/ChapterList.vala',
    'Widgets/Bin.vala',
    'Widgets/Views/Writer.vala',
    'Widgets/Views/Welcome.vala',
    'Dialogs/NewProject.vala',
    'Dialogs/Preferences.vala',
    'Services/ProjectManager.vala',
    'Utils/Utils.vala',
    'Utils/Enums.vala',
    'Utils/Lists.vala'
)
